# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.992 2012/03/28 01:12:20 zmedico Exp $

*portage-2.2.0_alpha96 (28 Mar 2012)

  28 Mar 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha96.ebuild,
  -portage-2.2.0_alpha93.ebuild:
  2.2.0_alpha96 version bump. This includes all of the fixes in
  portage-2.1.10.52. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.52 (28 Mar 2012)

  28 Mar 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.52.ebuild:
  2.1.10.52 version bump. This fixes bug #374335 (Bad file descriptor errors
  triggered by mod_jabber elog module), bug #398843 (suggest dispatch-conf
  instead of etc-update), bug #409647 (exit status 130 for --ask 'n' answer),
  bug #409835 (localize 'update portage' message), bug #409839 (fix grabdict
  docstring), and bug #409849 (fix etc-update to work with emacs diff_command).
  Bug #409383 tracks all bugs fixed since portage-2.1.10.49.

  25 Mar 2012; Markus Meier <maekke@gentoo.org> portage-2.1.10.49.ebuild:
  arm stable, bug #408391

  23 Mar 2012; Zac Medico <zmedico@gentoo.org> portage-9999.ebuild:
  Add die for dodoc failure.

*portage-2.2.0_alpha95 (23 Mar 2012)

  23 Mar 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha95.ebuild,
  -portage-2.2.0_alpha94.ebuild:
  2.2.0_alpha95 version bump. This includes all of the fixes in
  portage-2.1.10.51. Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.10.51 (23 Mar 2012)

  23 Mar 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.10.51.ebuild,
  -portage-2.1.10.50.ebuild:
  2.1.10.51 version bump. This fixes bug #382407 (disable repoman
  dependency.unknown warnings for blocker atoms), bug #402323 (clarify copy
  error message for FEATURES=xattr), and bug #409359 (clarify error message for
  collisions between symlinks and directories). Bug #409383 tracks all bugs