@@ -2,12 +2,10 @@ AUX README.RESCUE 137 RMD160 b8d015f266501fd1f57c91899c6815de9f9d5685 SHA1 cfc8f
 DIST portage-2.2.0_alpha88.tar.bz2 803852 RMD160 9c6a87c2a8de996286e74245faeaacf89fab0aea SHA1 d2f698470f0df250f51f937d78ea484d27ad0068 SHA256 75b74a87c4f4b1a13857f62aeb42522b491b06b66fe686ef4036993f55125130
 DIST portage-2.2.0_alpha89.patch.bz2 4205 RMD160 ff17958771ee571ccc45604682882356d2d54e5e SHA1 bf5ed24e13f89bcad128e8773f40ceea8bbd8ed2 SHA256 677bc5cce25723cefbdb8f147ac6fc7162d541eb0a149fbd1b96d79f4b2a07d1
 DIST portage-2.2.0_alpha94.tar.bz2 813945 RMD160 1abe94ff71b33255f260458d1b57a00755ba375b SHA1 5a7affd3e97bf8692a6b33ef55268b2d708bd1b8 SHA256 2b559d5596ad748be4587802012d1dfd817a1b7b40242be1f0145bb0e39a6b35
-DIST portage-2.2.0_alpha95.patch.bz2 2921 RMD160 78f73decc450bb13872b00bff674b94d096b2b65 SHA1 ab667442c6b661bbfdf40aeefb091951c846b270 SHA256 17414765cee5e7846b6309947b094aa22b29fa16c972e956db145bcf8cf152ea
 DIST portage-2.2.0_alpha96.patch.bz2 15820 RMD160 5d5b2e3ee72385f8c546d4114d45fc9d8153e849 SHA1 38094112aa7bcb7221200e63d14bf3831703f7ac SHA256 f3809a690d423315d4755cbfdd9e833929e685047eb1e68ef0416117af089c3f
 DIST portage-man-pl-2.1.2.tar.bz2 53893 RMD160 46c3656b40bf4ad2530ab2b5fbc563708b86748c SHA1 c3151e0b330c589625830e54053fbc676b2c64de SHA256 960eaa7c6f3a2af44bdc665266a8e884628a562373cc477d301597ecc5ef961f
 EBUILD portage-2.2.0_alpha89.ebuild 15740 RMD160 488c3ae4e6afb1fc1c03fe746466e0fbdb4f0770 SHA1 1ccc3403ec313a21a0016f79b2c11eca5f7235d6 SHA256 c0b562a3f7b52f202e4c0e7b814ad3de869c22a3e9e7429d7858909e136baf08
-EBUILD portage-2.2.0_alpha95.ebuild 12434 RMD160 e81c27f7d144238b3a092e6654a422123d4d7911 SHA1 a5a88783e72f743330723e94028096d4d81ee71c SHA256 b56e563d380925134da26d21a227a277bf82f9e2553fdf3d9137c3e3f4d2db59
 EBUILD portage-2.2.0_alpha96.ebuild 12434 RMD160 d7727ba842b50bb3e28dfa602c9971f5452cabc7 SHA1 b1bf5f744035d4f59243bd755a5b35c81de847a7 SHA256 b6793ae219f723525ef14833542b278328ebf5e996999559d8c3c1639eb7cb45
 EBUILD portage-9999.ebuild 11690 RMD160 1517b88b0b63b3b3d7cf12760ab701ae3a7f818a SHA1 6f330e055d9b683a7b99b34fb7ae5bad0d3fba04 SHA256 ed98f4911486a8738f175865d6f8e30091cd2c5bb2a5438dfa31b58abd0cafcb
-MISC ChangeLog 86212 RMD160 48555089a1d48d3c73e914b555a6c6ffc9f48579 SHA1 e3bcb9b8c4012021dda0aa1d78666cfd782c5d03 SHA256 a280d2870588770e860968b76607fa66d13931b62cc63123e9e642d31b2d771b
+MISC ChangeLog 86343 RMD160 1bcb19c0c5045766d050efd0594c4dfc99c8f50f SHA1 4e9b6041466f7a1058824c967cd44c39a0eb266d SHA256 059e78e9cd336198c2319b14c436a6ad36da1ddc2dbd679afcccb9ea7b39775c
 MISC metadata.xml 926 RMD160 9fd2d499d8102a870e45e63ec68400d71de950c6 SHA1 83f8455f45d0baaedcbbd3fc0186cccad54af7b9 SHA256 2609962ab6a20df40f95053513e6aca76b24caee81e7b3f45de7e3c7e33eec25
